Update and rename index1.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <body>
         <div class="header">
           <h2 >To Do List</h2>
-          <input type="text" id="myInput" placeholder="Title...">
+          <input type="text" id="myInput" placeholder="Enter a new task">
           <span onclick="newElement()" class="addbutton">Add</span>
         </div>
         <ul id="mytodo">
