--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
     <!DOCTYPE html>
     <html>
       <head>
-        <link rel="stylesheet"  href="todolist.css">
+        <link rel="stylesheet"  href="style.css">
       </head>
       <body>
         <div class="header">
@@ -16,6 +16,6 @@
           <li>Create JavaScript projects</li>
         </ul>
         <button type="button" id="clear-list" onclick="removeAll()">Clear Items</button>
-        <script type="text/javascript" src="todolist.js"></script>
+        <script type="text/javascript" src="app.js"></script>
       </body>
     </html>
