--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
     <!DOCTYPE html>
     <html>
       <head>
+        <title>To-Do-List using javascript</title>
         <link rel="stylesheet"  href="style.css">
       </head>
       <body>
@@ -10,12 +11,9 @@
           <span onclick="newElement()" class="addbutton">Add</span>
         </div>
         <ul id="mytodo">
-          <li class="checked">Organise my notes</li>
-          <li>Practise the codes</li>
-          <li>Read a book on JavaScript</li>
-          <li>Create JavaScript projects</li>
+          
         </ul>
-        <button type="button" id="clear-list" onclick="removeAll()">Clear Items</button>
+        <button type="button" id="clear-list" onclick="removeAll()">Remove All</button>
         <script type="text/javascript" src="app.js"></script>
       </body>
     </html>
